--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -17,16 +17,23 @@
   },
   "dependencies": {
     "@classroom/db": "workspace:*",
+    "@classroom/ui": "workspace:*",
     "@cloudflare/kv-asset-handler": "^0.3.2",
+    "@conform-to/react": "^1.1.3",
+    "@conform-to/zod": "^1.1.3",
+    "@epic-web/cachified": "^5.2.0",
     "@remix-run/cloudflare": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/server-runtime": "*",
+    "cachified-adapter-cloudflare-kv": "^2.2.1",
     "isbot": "^4.1.0",
     "miniflare": "^3.20240512.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "remix-auth": "^3.6.0",
+    "remix-auth-form": "^1.5.0",
     "remix-utils": "^7.6.0",
+    "tiny-invariant": "^1.3.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -37,10 +44,15 @@
     "@classroom/tsconfig": "workspace:*",
     "@cloudflare/workers-types": "^4.20240512.0",
     "@remix-run/dev": "^2.9.2",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.2.0",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.4.38",
+    "remix-flat-routes": "^0.6.5",
+    "tailwindcss": "^3.4.3",
     "tsx": "^4.10.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
