--- a/apps/remix/wrangler.toml
+++ b/apps/remix/wrangler.toml
@@ -3,10 +3,14 @@ name = "classroom-remix"
 
 main = "./server.ts"
 workers_dev = true
-compatibility_date = "2023-04-20"
+compatibility_date = "2024-05-12"
 
 services = [
   { binding = "AUTH", service = "classroom-service-auth" }
+]
+
+kv_namespaces = [
+  { binding = "CACHE", id = "f47062b8b39c4c289d354d8d839d7c51" }
 ]
 
 [placement]
@@ -17,6 +21,7 @@ bucket = "./build/client"
 
 [build]
 command = "pnpm run build"
+
 
 [[d1_databases]]
 binding = "DB"
