--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -19,7 +19,6 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch",
     "clean": "rm -rf .turbo node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
@@ -28,10 +27,10 @@
     "db:migrate:local": "wrangler d1 migrations apply classroom-prod --local",
     "db:migrate:prod": "wrangler d1 migrations apply classroom-prod --remote",
     "db:migrate:preview": "wrangler d1 migrations apply --env preview classroom-preview --remote",
-    "db:studio:local": "cross-env LOCAL_DB_PATH=$(find ../../.data/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit studio",
+    "db:studio:local": "cross-env LOCAL_DB_PATH=$(find ../../.data/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit studio",
     "db:studio:preview": "cross-env DB_NAME='classroom-preview' WRANGLER_CONFIG='--environment=preview' drizzle-kit studio",
     "db:studio:prod": "drizzle-kit studio",
-    "db:push:local": "cross-env LOCAL_DB_PATH=$(find ../../.data/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit push"
+    "db:push:local": "cross-env LOCAL_DB_PATH=$(find ../../.data/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit push"
   },
   "dependencies": {
     "drizzle-orm": "^0.30.10",
@@ -45,7 +44,8 @@
     "@types/node": "^20.12.12",
     "better-sqlite3": "^10.0.0",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.21.1",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.21.4",
     "eslint": "^9.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
