--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -56,6 +56,7 @@
     "tsx": "^4.10.5",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
+    "vite-tsconfig-paths": "^4.3.2",
     "wrangler": "^3.57.0"
   },
   "engines": {
