--- a/package.json
+++ b/package.json
@@ -29,13 +29,18 @@
     "@classroom/prettier-config": "workspace:*",
     "@cloudflare/workers-types": "^4.20221111.1",
     "prettier": "3.2.5",
+    "syncpack": "^12.3.2",
     "turbo": "1.13.3",
     "typescript": "^5.4.5"
   },
   "prettier": "@classroom/prettier-config",
   "pnpm": {
     "patchedDependencies": {
-      "@conform-to/dom@1.1.3": "patches/@conform-to__dom@1.1.3.patch"
+      "@conform-to/dom@1.1.3": "patches/@conform-to__dom@1.1.3.patch",
+      "partykit@0.0.105": "patches/partykit@0.0.105.patch"
+    },
+    "overrides": {
+      "miniflare@3.20240320.0": "3.20240524.0"
     }
   }
 }
