--- a/apps/remix/wrangler.toml
+++ b/apps/remix/wrangler.toml
@@ -3,6 +3,7 @@ name = "classroom-remix"
 
 main = "./server.ts"
 workers_dev = true
+account_id = "1f507c7933d231cc8051d23050bda6ab"
 compatibility_date = "2024-05-12"
 
 services = [
