--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean:workspaces": "turbo clean",
     "db:push": "pnpm -F db push",
     "db:studio": "pnpm -F db studio",
-    "dev": "turbo dev --parallel",
+    "dev": "turbo dev --filter=!@classroom/ws-server --parallel",
     "format": "turbo format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
     "format:fix": "turbo format --continue -- --write --cache --cache-location node_modules/.cache/.prettiercache",
     "lint": "turbo lint --continue -- --cache --cache-location node_modules/.cache/.eslintcache",
@@ -37,7 +37,8 @@
   "pnpm": {
     "patchedDependencies": {
       "@conform-to/dom@1.1.3": "patches/@conform-to__dom@1.1.3.patch",
-      "partykit@0.0.105": "patches/partykit@0.0.105.patch"
+      "partykit@0.0.105": "patches/partykit@0.0.105.patch",
+      "remix-utils@7.6.0": "patches/remix-utils@7.6.0.patch"
     },
     "overrides": {
       "miniflare@3.20240320.0": "3.20240524.0"
