--- a/services/argon2/wrangler.toml
+++ b/services/argon2/wrangler.toml
@@ -1,6 +1,7 @@
 name = "classroom-service-argon2"
 main = "build/worker/shim.mjs"
-compatibility_date = "2024-05-18"
+account_id = "1f507c7933d231cc8051d23050bda6ab"
+compatibility_date = "2024-05-12"
 
 [build]
 command = "cargo install -q worker-build && worker-build --release"
