--- a/services/auth/wrangler.toml
+++ b/services/auth/wrangler.toml
@@ -5,6 +5,9 @@ account_id = "1f507c7933d231cc8051d23050bda6ab"
 compatibility_date = "2024-05-12"
 compatibility_flags = ["nodejs_compat"]
 
+dev.port = 5002
+dev.inspector_port = 9002
+
 services = [
   { binding = "ARGON2", service = "classroom-service-argon2" }
 ]
