--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -35,6 +35,8 @@
     "remix-auth-form": "^1.5.0",
     "remix-utils": "^7.6.0",
     "tiny-invariant": "^1.3.3",
+    "tldraw": "^2.1.4",
+    "y-utility": "^0.1.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
