--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "partykit dev --live --persist=\"../../.data\"",
-    "deploy": "env-cmd partykit deploy --domain classroom-ws-server.krolebord.workers.dev"
+    "deploy": "env-cmd partykit deploy --with-env --domain classroom-ws-server.krolebord.workers.dev"
   },
   "dependencies": {
     "partysocket": "^1.0.1",
