--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -31,13 +31,16 @@
     "lucide-react": "^0.379.0",
     "miniflare": "^3.20240512.0",
     "partysocket": "^1.0.1",
+    "quill-cursors": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.5.0",
     "remix-utils": "^7.6.0",
     "tiny-invariant": "^1.3.3",
     "tldraw": "^2.1.4",
+    "y-quill": "^1.0.0",
     "y-utility": "^0.1.4",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
